[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/Montserrat/Montserrat-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/LevelEditor_ModeSelect.gd" type="Script" id=2]
[ext_resource path="res://icons/back/outline_arrow_back_black_24dp.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://icons/back/outline_arrow_back_black_pressed_24dp.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 34
outline_color = Color( 0.631373, 0.415686, 0.909804, 1 )
font_data = ExtResource( 1 )

[node name="LevelEditor_Size_Select" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 1, 0.933333, 0.866667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]

[node name="BackButton" type="TextureButton" parent="Buttons"]
margin_left = 21.0
margin_top = 31.0
margin_right = 110.0
margin_bottom = 87.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_left = 116.0
margin_top = 248.0
margin_right = 360.0
margin_bottom = 768.0
rect_min_size = Vector2( 210, 100 )
rect_scale = Vector2( 1, 0.8 )
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5x5" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 244.0
margin_bottom = 100.0
rect_min_size = Vector2( 210, 100 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "5x5"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="6x6" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 140.0
margin_right = 244.0
margin_bottom = 240.0
rect_min_size = Vector2( 210, 100 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "6x6"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="8x8" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 280.0
margin_right = 244.0
margin_bottom = 380.0
rect_min_size = Vector2( 210, 100 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "8x8"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Label"]
margin_left = 44.0
margin_top = 118.0
margin_right = 454.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.631373, 0.415686, 0.909804, 1 )
text = "CHOOSE THE GAME BOARD SIZE"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/5x5" to="." method="_on_5x5_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/6x6" to="." method="_on_6x6_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/8x8" to="." method="_on_8x8_pressed"]
